fix - overflow country cards

--- a/client/src/components/CountryCard/CountryCard.module.css
+++ b/client/src/components/CountryCard/CountryCard.module.css
@@ -33,7 +33,7 @@
 .card_basic_info>h3 {
   background-color: var(--third-color);
   font-weight: bold;
-  padding: 5px;
+  padding: 1px;
   border-radius: 6px;
   min-width: 100px;
 }
@@ -43,6 +43,10 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.9);
   justify-content: center;
+}
+
+.card_basic_info:hover > h2{
+  font-size: 1.2em;
 }
 
 .card_basic_info:active {
